[gd_scene load_steps=4 format=3 uid="uid://cakvwe58rleq2"]

[ext_resource type="PackedScene" uid="uid://bv8vdsweyk0cx" path="res://Classes/base_enemy.tscn" id="1_epvc6"]
[ext_resource type="PackedScene" uid="uid://ceh0wgpgda8f3" path="res://Classes/radar.tscn" id="2_ovacq"]
[ext_resource type="Script" path="res://Scripts/base_shooter_enemy.gd" id="2_uxyov"]

[node name="BaseShooterEnemy" instance=ExtResource("1_epvc6")]
script = ExtResource("2_uxyov")
Bullet = null

[node name="Radar" parent="." index="4" instance=ExtResource("2_ovacq")]

[node name="Timer" type="Timer" parent="." index="5"]
one_shot = true

[node name="Marker" type="Marker2D" parent="." index="6"]
position = Vector2(-26, 0)

[connection signal="body_entered" from="Radar" to="." method="_on_radar_body_entered"]
[connection signal="body_exited" from="Radar" to="." method="_on_radar_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
